New logo, specific to RapidBlock.

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
     <header id="header">
       <h1 id="header-headline">The RapidBlock Project</h1>
       <p id="header-logo" aria-hidden="true">
-        <!-- https://commons.wikimedia.org/wiki/File:Fediverse_logo_proposal.svg -->
-        <img src="/img/fediverse.svg" alt="Logo for the Fediverse">
+        <img src="/img/128x128.png" alt="Logo for the RapidBlock Project">
       </p>
       <p id="header-social">
         <a rel="me" href="https://social.rapidblock.org/@rapidblock">@rapidblock@rapidblock.org</a>
