Tweak external links, add Google Forms submission form.

--- a/index.html
+++ b/index.html
@@ -167,25 +167,31 @@
       <section id="sec-extlinks">
         <h2><a href="#sec-extlinks">External links</a></h2>
         <dl>
-          <dt><a href="https://github.com/chronos-tachyon/rapidblock/">github.com/chronos-tachyon/rapidblock</a></dt>
+          <dt><a href="https://docs.google.com/forms/d/e/1FAIpQLSd9e4BhwI62oj1gz8gBUPDiw4PfD_x4tLoPsDbkeK1U314ZTA/viewform?usp=sf_link">Google Forms</a></dt>
           <dd>
-            Linux command line tool for Mastodon instance admins to
-            automatically import RapidBlock's official blocklist into their
-            instance's database.
-          </dd>
-          <dt><a href="https://social.rapidblock.org/@rapidblock">@rapidblock@rapidblock.org</a></dt>
-          <dd>
-            Mastodon ActivityPub feed for announcements.
-          </dd>
-          <dt><a href="https://rapidblock.groups.io/g/announce">rapidblock.groups.io/g/announce</a></dt>
-          <dd>
-            Public e-mail mailing list for announcements.
+            You can submit your domain block suggestions via this form without
+            needing to sign up for the mailing list.  Your e-mail address will
+            NOT be collected.
           </dd>
           <dt><a href="https://rapidblock.groups.io/g/public">rapidblock.groups.io/g/public</a></dt>
           <dd>
             Public e-mail mailing list for discussions, including both the
             suggestions of new blocks and the reversals of mistaken or
             remediated blocks.
+          </dd>
+          <dt><a href="https://rapidblock.groups.io/g/announce">rapidblock.groups.io/g/announce</a></dt>
+          <dd>
+            Public e-mail mailing list for announcements.
+          </dd>
+          <dt><a href="https://social.rapidblock.org/@rapidblock">@rapidblock@rapidblock.org</a></dt>
+          <dd>
+            Mastodon ActivityPub feed for announcements.
+          </dd>
+          <dt><a href="https://github.com/rapidblock-org">github.com/rapidblock-org</a></dt>
+          <dd>
+            GitHub organization for the RapidBlock project, including the
+            website, the source code, and the scripts for maintaining OS-level
+            package manager repositories for installing the code.
           </dd>
         </dl>
       </section>
