Add a Team page.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
         they haven't gotten around to hurting yet.
         </p>
       </section>
+      <section id="sec-who-we-are">
+        <h2><a href="#sec-who-we-are">Who We Are</a></h2>
+        <p>
+          Please see the <a href="/team/">Team</a> page.
+        </p>
+      </section>
       <section id="sec-files">
         <h2><a href="#sec-files">Files</a></h2>
         <dl>
