Place website under CC By-NC-SA 4.0 license.

--- a/spec/v1/index.html
+++ b/spec/v1/index.html
@@ -47,7 +47,35 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
   </head>
   <body id="top">
-    <h1>RapidBlock JSON File Format, Version 1</h1>
-    <p>Under construction.</p>
+    <header id="header">
+      <h1 id="header-headline">The RapidBlock Project</h1>
+      <p id="header-logo" aria-hidden="true">
+        <img src="/img/128x128.png" alt="Logo for the RapidBlock Project">
+      </p>
+      <p id="header-social">
+        <a rel="me" href="https://social.rapidblock.org/@rapidblock">@rapidblock@rapidblock.org</a>
+      </p>
+    </header>
+    <main id="main">
+      <h1>RapidBlock JSON File Format, Version 1</h1>
+      <p>Under construction.</p>
+    </main>
+    <footer id="footer">
+      <div id="copyright">
+        <div id="copyright-cclogo" aria-hidden="true">
+          <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" tabindex="-1">
+            <img src="/img/cc-by-nc-sa-4.0-88x31.png" alt="CC BY-NC-SA 4.0" width="88" height="31">
+          </a>
+        </div>
+        <div id="copyright-text">
+          RapidBlock.org Website © 2022 by the RapidBlock Project Owners is
+          licensed under
+          <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.
+        </div>
+      </div>
+      <div id="back-to-top">
+        <a href="#top">↑</a>
+      </div>
+    </footer>
   </body>
 </html>
