--- a/team/index.html
+++ b/team/index.html
@@ -105,9 +105,16 @@
     </main>
     <footer id="footer">
       <div id="copyright">
-        <span id="copyright-symbol">&copy;</span>
-        <span id="copyright-year">2022</span>
-        <span id="copyright-holder">The RapidBlock Project Owners</span>
+        <div id="copyright-cclogo" aria-hidden="true">
+          <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" tabindex="-1">
+            <img src="/img/cc-by-nc-sa-4.0-88x31.png" alt="CC BY-NC-SA 4.0" width="88" height="31">
+          </a>
+        </div>
+        <div id="copyright-text">
+          RapidBlock.org Website © 2022 by the RapidBlock Project Owners is
+          licensed under
+          <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.
+        </div>
       </div>
       <div id="back-to-top">
         <a href="#top">↑</a>
