Include backlinks to the landing page, and remove rel=me from all pages except the landing page.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,15 @@
   </head>
   <body id="top">
     <header id="header">
-      <h1 id="header-headline">The RapidBlock Project</h1>
+      <h1 id="header-headline">
+        <a href="/">
+          The RapidBlock Project
+        </a>
+      </h1>
       <p id="header-logo" aria-hidden="true">
-        <img src="/img/128x128.png" alt="Logo for the RapidBlock Project">
+        <a href="/">
+          <img src="/img/128x128.png" alt="Logo for the RapidBlock Project">
+        </a>
       </p>
       <p id="header-social">
         <a rel="me" href="https://social.rapidblock.org/@rapidblock">@rapidblock@rapidblock.org</a>
